--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
-# DB-START
     db:
-        container_name: go_db
+        container_name: neural_db
         image: postgres
         environment:
             POSTGRES_USER: ${DB_USER}
@@ -15,15 +14,12 @@ services:
             test: ["CMD", "pg_isready", "-U", "${DB_USER}", "-d", "${DB_NAME}"]
             interval: 3s
             retries: 5
-# DB-END
 
     go_backend:
-        container_name: go_backend
-# DB-START
+        container_name: neural_backend
         depends_on:
             db:
                 condition: service_healthy
-# DB-END
         build:
             dockerfile: ./Dockerfile
             context: .
