--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ args_bin = ["web"]
 bin = "./tmp/main"
 cmd = "go build -o ./tmp/main"
 delay = 0
-exclude_dir = ["tmp", "vendor", "testdata", "node_modules", "volumes"]
+exclude_dir = ["tmp", "vendor", "testdata", "node_modules", "_volumes"]
 exclude_file = []
 exclude_regex = ["_test.go", "_templ.go"]
 exclude_unchanged = false
